# unitree_go2_create_dataset

./: .gitignore  README.md  unitree_ros2_setup.sh
dataset/: dataset_0.db3  metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/create_dataset/lib/create_dataset/: control_speed  read_data  record_data
install/create_dataset/share/ament_index/resource_index/package_run_dependencies/: create_dataset
install/create_dataset/share/ament_index/resource_index/parent_prefix_path/: create_dataset
install/create_dataset/share/create_dataset/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_state/include/robot_state/robot_state/msg/: robot_state.h  robot_state.hpp
install/robot_state/include/robot_state/robot_state/msg/detail/: robot_state__functions.h  robot_state__rosidl_typesupport_introspection_cpp.hpp  robot_state__struct.hpp  robot_state__type_support.cpp  robot_state__type_support.h
install/robot_state/local/lib/python3.10/dist-packages/robot_state-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
install/robot_state/local/lib/python3.10/dist-packages/robot_state/msg/: _robot_state.py
install/robot_state/share/robot_state/: local_setup.sh  package.sh  package.xml
install/robot_state/share/robot_state/cmake/: rosidl_cmake-extras.cmake
install/robot_state/share/robot_state/msg/: RobotState.idl
log/: latest_build
src/create_dataset/: CMakeLists.txt  package.xml
src/create_dataset/src/: control_speed.cpp  read_data.cpp  record_data.cpp
src/robot_state/: CMakeLists.txt
